@startuml
package "Order Service" {

  class Order {
    +orderId: UUID
    +amount: BigDecimal
    +status: OrderStatus
    +store: Store
    +sagaId: UUID
    +updateStatus(status: OrderStatus): void
  }

  class OrderController {
    +createOrder(userId: Long, amount: BigDecimal): OrderResponse
  }

  class OrderService {
    - OrderRepository orderRepository
    - OrderOutboxRepository orderOutboxRepository

    +placeOrder(userId: Long, amount: BigDecimal): Order
    -markOrderPaid(orderId: Long): void
    -createOutboxEvent(order: Order, eventType: String): void
  }

  interface OrderRepository {
    + save(Order order)
    + findById(UUID orderId): Order
  }

  class OrderOutbox {
    +outboxId: Long
    +sagaId: UUID
    +eventType: String
    +payload: JSON
    +status: OutboxStatus
    +createdAt: LocalDateTime
  }

  interface OrderOutboxRepository {
    + save(OrderOutbox event)
    + findUnsentEvents(): List<OrderOutbox>
    + markAsSent(outboxId: Long): void
  }

  Order "1" -- "0..*" OrderOutbox : "triggers"
  OrderService --> OrderRepository : persist Order
  OrderService --> OrderOutboxRepository : save Event
  OrderController --> OrderService : invoke placeOrder()
}
@enduml
